Put a CSRF token for create_bid page

--- a/auction/templates/create_bid.html
+++ b/auction/templates/create_bid.html
@@ -27,6 +27,7 @@
 
 <form class="ui form" method="post"
   action="{{ url_for('main.create_bid', auction_id=auction.id) }}">
+  {{ form.csrf_token }}
   <input type="hidden" name="auction_id" value="{{ auction.id }}"/>
 
   <div class="two fields">
